[package]
name = "lockdapp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "lockdapp"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
sha2 = "0.10"

[workspace]
resolver = "2"

[profile.dev]
opt-level = 1  # Optimization level for development builds

[profile.release]
opt-level = "z"  # Optimize for size (use this for production)
